--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
             background-color: #fdf2f8; 
             margin: 0;
             overflow-x: hidden;
-            background-image: radial-gradient(#fbcfe8 1.5px, transparent 1.5px);
+            background-image: radial-gradient(#f9a8d4 1.5px, transparent 1.5px);
             background-size: 30px 30px;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            color: #1e1b4b; /* Indigo-950 for base text contrast */
         }
         #root {
             width: 100%;
@@ -47,17 +48,6 @@
             border: 4px solid white;
             position: relative;
         }
-        .balloon-heading::after {
-            content: '';
-            position: absolute;
-            top: 20%;
-            left: 15%;
-            width: 20%;
-            height: 10%;
-            background: rgba(255,255,255,0.8);
-            border-radius: 50%;
-            filter: blur(2px);
-        }
 
         .balloon-item {
             border-radius: 3rem;
@@ -70,51 +60,7 @@
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             border: 4px solid #fff;
         }
-        .balloon-item:hover {
-            transform: translateY(-6px) scale(1.01);
-            box-shadow: 
-                0 25px 30px rgba(0,0,0,0.08), 
-                inset 0 -8px 12px rgba(0,0,0,0.05);
-        }
         
-        .balloon-item::after {
-            content: '';
-            position: absolute;
-            top: 15px;
-            left: 30px;
-            width: 40px;
-            height: 20px;
-            background: rgba(255,255,255,0.6);
-            border-radius: 100%;
-            filter: blur(6px);
-            pointer-events: none;
-            transform: rotate(-15deg);
-        }
-
-        .balloon-button {
-            border-radius: 9999px;
-            box-shadow: 0 10px 0 rgba(0,0,0,0.15);
-            transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            position: relative;
-            overflow: hidden;
-            border: 2px solid rgba(255,255,255,0.3);
-        }
-        .balloon-button:active {
-            transform: translateY(6px);
-            box-shadow: 0 4px 0 rgba(0,0,0,0.15);
-        }
-        .balloon-button::before {
-            content: '';
-            position: absolute;
-            top: 4px;
-            left: 20%;
-            width: 25%;
-            height: 15%;
-            background: rgba(255,255,255,0.4);
-            border-radius: 50%;
-            filter: blur(1px);
-        }
-
         .bouncy {
             animation: balloon-float 3s ease-in-out infinite;
         }
@@ -130,10 +76,6 @@
         }
         .pop-effect { animation: pop 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
 
-        .magic-gradient {
-            background: linear-gradient(135deg, #c084fc 0%, #f472b6 100%);
-        }
-
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
 
@@ -144,76 +86,6 @@
         }
         .animate-pop { animation: popIn 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards; }
 
-        @keyframes pounce {
-            0% { transform: translateY(0) scale(1); }
-            30% { transform: translateY(-40px) scale(1.2); }
-            100% { transform: translateY(0) scale(1); }
-        }
-        .animate-pounce { animation: pounce 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-
-        @keyframes stomp {
-            0% { transform: translate(0, 0); }
-            20% { transform: translate(-5px, 0); }
-            40% { transform: translate(5px, 0); }
-            60% { transform: translate(-5px, 0); }
-            80% { transform: translate(5px, 0); }
-            100% { transform: translate(0, 0); }
-        }
-        .animate-stomp { animation: stomp 0.5s linear; }
-
-        @keyframes stretch {
-            0% { transform: scaleY(1); }
-            50% { transform: scaleY(1.4) translateY(-10px); }
-            100% { transform: scaleY(1); }
-        }
-        .animate-stretch { animation: stretch 0.8s ease-in-out; }
-
-        @keyframes sway {
-            0% { transform: rotate(0deg); }
-            25% { transform: rotate(15deg); }
-            75% { transform: rotate(-15deg); }
-            100% { transform: rotate(0deg); }
-        }
-        .animate-sway { animation: sway 1s ease-in-out; }
-
-        @keyframes bloom {
-            0% { transform: scale(1) rotate(0); }
-            50% { transform: scale(1.3) rotate(180deg); }
-            100% { transform: scale(1) rotate(360deg); }
-        }
-        .animate-bloom { animation: bloom 1.2s ease-in-out; }
-
-        @keyframes fish-swim {
-            0% { transform: translateX(calc(100vw + 150px)) translateY(0) scaleX(-1); opacity: 0; }
-            10% { opacity: 1; }
-            90% { opacity: 1; }
-            100% { transform: translateX(-150px) translateY(0) scaleX(-1); opacity: 0; }
-        }
-        .animate-fish {
-            animation: fish-swim 8s linear forwards;
-        }
-
-        @keyframes firework-burst {
-            0% { transform: scale(0); opacity: 1; }
-            50% { transform: scale(1.2); opacity: 0.8; }
-            100% { transform: scale(1.5); opacity: 0; }
-        }
-        .animate-firework {
-            animation: firework-burst 1s ease-out forwards;
-        }
-
-        @keyframes dolphin-jump {
-            0% { transform: translateY(100vh) rotate(-30deg); opacity: 0; }
-            20% { opacity: 1; }
-            50% { transform: translateY(-30vh) rotate(0deg); }
-            80% { opacity: 1; }
-            100% { transform: translateY(100vh) rotate(30deg); opacity: 0; }
-        }
-        .animate-dolphin-jump {
-            animation: dolphin-jump 2.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-        }
-
-        /* Specific styles for the 1680x1050 container */
         .app-boundary {
             width: 1680px;
             height: 1050px;
@@ -235,7 +107,9 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "jspdf": "https://esm.sh/jspdf@^2.5.1"
+    "jspdf": "https://esm.sh/jspdf@^2.5.1",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.10.38",
+    "pdfjs-dist/build/pdf.worker.mjs": "https://esm.sh/pdfjs-dist@4.10.38/build/pdf.worker.mjs"
   }
 }
 </script>
